syntax = "proto3";

package skeleton.ping;

option go_package = "pbs";

service ping {
    // Ping server with subject and expect to return a text
    rpc Ping(ping_input) returns (PingOutput);

    rpc Pong(PongInput) returns (PongOutput);
}

message ping_input {
    string subject = 1;
}

message PingOutput {
    string text = 1;
}

message PongInput {
    string text = 1;
}

message PongOutput {
    string subject = 1;
}
